// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`linux concurrent 1`] = `
{
  "linux": [
    {
      "arch": "arm64",
      "file": "Test App ßW-1.1.0-arm64.AppImage",
      "safeArtifactName": "TestApp-1.1.0-arm64.AppImage",
      "updateInfo": {
        "blockMapSize": "@blockMapSize",
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "arch": "x64",
      "file": "Test App ßW-1.1.0.AppImage",
      "safeArtifactName": "TestApp-1.1.0-x86_64.AppImage",
      "updateInfo": {
        "blockMapSize": "@blockMapSize",
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "arch": "x64",
      "file": "TestApp_1.1.0_amd64.deb",
    },
    {
      "arch": "arm64",
      "file": "TestApp_1.1.0_arm64.deb",
    },
    {
      "arch": "arm64",
      "file": "TestApp-1.1.0.aarch64.rpm",
    },
    {
      "arch": "x64",
      "file": "TestApp-1.1.0.x86_64.rpm",
    },
  ],
}
`;

exports[`linux concurrent 2`] = `
[
  "/",
  "/opt/",
  "/usr/",
  "/opt/Test App ßW/",
  "/opt/Test App ßW/chrome-sandbox",
  "/opt/Test App ßW/chrome_100_percent.pak",
  "/opt/Test App ßW/chrome_200_percent.pak",
  "/opt/Test App ßW/chrome_crashpad_handler",
  "/opt/Test App ßW/icudtl.dat",
  "/opt/Test App ßW/libEGL.so",
  "/opt/Test App ßW/libffmpeg.so",
  "/opt/Test App ßW/libGLESv2.so",
  "/opt/Test App ßW/libvk_swiftshader.so",
  "/opt/Test App ßW/libvulkan.so.1",
  "/opt/Test App ßW/LICENSE.electron.txt",
  "/opt/Test App ßW/LICENSES.chromium.html",
  "/opt/Test App ßW/resources.pak",
  "/opt/Test App ßW/snapshot_blob.bin",
  "/opt/Test App ßW/testapp",
  "/opt/Test App ßW/v8_context_snapshot.bin",
  "/opt/Test App ßW/vk_swiftshader_icd.json",
  "/usr/share/",
  "/opt/Test App ßW/resources/",
  "/opt/Test App ßW/resources/app.asar",
  "/opt/Test App ßW/resources/apparmor-profile",
  "/usr/share/applications/",
  "/usr/share/applications/testapp.desktop",
  "/usr/share/doc/",
  "/usr/share/icons/",
  "/usr/share/doc/testapp/",
  "/usr/share/doc/testapp/changelog.gz",
  "/usr/share/icons/hicolor/",
  "/usr/share/icons/hicolor/128x128/",
  "/usr/share/icons/hicolor/16x16/",
  "/usr/share/icons/hicolor/256x256/",
  "/usr/share/icons/hicolor/32x32/",
  "/usr/share/icons/hicolor/48x48/",
  "/usr/share/icons/hicolor/512x512/",
  "/usr/share/icons/hicolor/64x64/",
  "/usr/share/icons/hicolor/128x128/apps/",
  "/usr/share/icons/hicolor/128x128/apps/testapp.png",
  "/usr/share/icons/hicolor/16x16/apps/",
  "/usr/share/icons/hicolor/16x16/apps/testapp.png",
  "/usr/share/icons/hicolor/256x256/apps/",
  "/usr/share/icons/hicolor/256x256/apps/testapp.png",
  "/usr/share/icons/hicolor/32x32/apps/",
  "/usr/share/icons/hicolor/32x32/apps/testapp.png",
  "/usr/share/icons/hicolor/48x48/apps/",
  "/usr/share/icons/hicolor/48x48/apps/testapp.png",
  "/usr/share/icons/hicolor/512x512/apps/",
  "/usr/share/icons/hicolor/512x512/apps/testapp.png",
  "/usr/share/icons/hicolor/64x64/apps/",
  "/usr/share/icons/hicolor/64x64/apps/testapp.png",
]
`;

exports[`linux concurrent 3`] = `
{
  "Architecture": "amd64",
  "Depends": "libgtk-3-0, libnotify4, libnss3, libxss1, libxtst6, xdg-utils, libatspi2.0-0, libuuid1, libsecret-1-0",
  "Homepage": "http://foo.example.com",
  "License": "MIT",
  "Maintainer": "Foo Bar <foo@example.com>",
  "Package": "testapp",
  "Priority": "optional",
  "Recommends": "libappindicator3-1",
  "Section": "devel",
  "Vendor": "Foo Bar <foo@example.com>",
}
`;

exports[`linux concurrent 4`] = `"Test Application (test quite “ #378)"`;

exports[`win concurrent 1`] = `
{
  "win": [
    {
      "file": "Test App ßW Setup 1.1.0.exe",
      "safeArtifactName": "TestApp-Setup-1.1.0.exe",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "Test App ßW Setup 1.1.0.exe.blockmap",
      "safeArtifactName": "TestApp-Setup-1.1.0.exe.blockmap",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
  ],
}
`;

exports[`win/linux concurrent 1`] = `
{
  "linux": [
    {
      "arch": "arm64",
      "file": "TestApp-1.1.0-arm64.AppImage",
      "updateInfo": {
        "blockMapSize": "@blockMapSize",
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "arch": "x64",
      "file": "TestApp-1.1.0.AppImage",
      "updateInfo": {
        "blockMapSize": "@blockMapSize",
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "arch": "x64",
      "file": "TestApp_1.1.0_amd64.deb",
    },
    {
      "arch": "arm64",
      "file": "TestApp_1.1.0_arm64.deb",
    },
    {
      "arch": "arm64",
      "file": "TestApp-1.1.0.aarch64.rpm",
    },
    {
      "arch": "x64",
      "file": "TestApp-1.1.0.x86_64.rpm",
    },
  ],
  "win": [
    {
      "file": "TestApp Setup 1.1.0.exe",
      "safeArtifactName": "TestApp-Setup-1.1.0.exe",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "TestApp Setup 1.1.0.exe.blockmap",
      "safeArtifactName": "TestApp-Setup-1.1.0.exe.blockmap",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
  ],
}
`;

exports[`win/linux concurrent 2`] = `
[
  "/",
  "/opt/",
  "/usr/",
  "/opt/TestApp/",
  "/opt/TestApp/chrome-sandbox",
  "/opt/TestApp/chrome_100_percent.pak",
  "/opt/TestApp/chrome_200_percent.pak",
  "/opt/TestApp/chrome_crashpad_handler",
  "/opt/TestApp/icudtl.dat",
  "/opt/TestApp/libEGL.so",
  "/opt/TestApp/libffmpeg.so",
  "/opt/TestApp/libGLESv2.so",
  "/opt/TestApp/libvk_swiftshader.so",
  "/opt/TestApp/libvulkan.so.1",
  "/opt/TestApp/LICENSE.electron.txt",
  "/opt/TestApp/LICENSES.chromium.html",
  "/opt/TestApp/resources.pak",
  "/opt/TestApp/snapshot_blob.bin",
  "/opt/TestApp/testapp",
  "/opt/TestApp/v8_context_snapshot.bin",
  "/opt/TestApp/vk_swiftshader_icd.json",
  "/usr/share/",
  "/opt/TestApp/resources/",
  "/opt/TestApp/resources/app.asar",
  "/opt/TestApp/resources/apparmor-profile",
  "/usr/share/applications/",
  "/usr/share/applications/testapp.desktop",
  "/usr/share/doc/",
  "/usr/share/icons/",
  "/usr/share/doc/testapp/",
  "/usr/share/doc/testapp/changelog.gz",
  "/usr/share/icons/hicolor/",
  "/usr/share/icons/hicolor/128x128/",
  "/usr/share/icons/hicolor/16x16/",
  "/usr/share/icons/hicolor/256x256/",
  "/usr/share/icons/hicolor/32x32/",
  "/usr/share/icons/hicolor/48x48/",
  "/usr/share/icons/hicolor/512x512/",
  "/usr/share/icons/hicolor/64x64/",
  "/usr/share/icons/hicolor/128x128/apps/",
  "/usr/share/icons/hicolor/128x128/apps/testapp.png",
  "/usr/share/icons/hicolor/16x16/apps/",
  "/usr/share/icons/hicolor/16x16/apps/testapp.png",
  "/usr/share/icons/hicolor/256x256/apps/",
  "/usr/share/icons/hicolor/256x256/apps/testapp.png",
  "/usr/share/icons/hicolor/32x32/apps/",
  "/usr/share/icons/hicolor/32x32/apps/testapp.png",
  "/usr/share/icons/hicolor/48x48/apps/",
  "/usr/share/icons/hicolor/48x48/apps/testapp.png",
  "/usr/share/icons/hicolor/512x512/apps/",
  "/usr/share/icons/hicolor/512x512/apps/testapp.png",
  "/usr/share/icons/hicolor/64x64/apps/",
  "/usr/share/icons/hicolor/64x64/apps/testapp.png",
]
`;

exports[`win/linux concurrent 3`] = `
{
  "Architecture": "amd64",
  "Depends": "libgtk-3-0, libnotify4, libnss3, libxss1, libxtst6, xdg-utils, libatspi2.0-0, libuuid1, libsecret-1-0",
  "Homepage": "http://foo.example.com",
  "License": "MIT",
  "Maintainer": "Foo Bar <foo@example.com>",
  "Package": "testapp",
  "Priority": "optional",
  "Recommends": "libappindicator3-1",
  "Section": "default",
  "Vendor": "Foo Bar <foo@example.com>",
}
`;

exports[`win/linux concurrent 4`] = `"Test Application (test quite “ #378)"`;
